--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MovieApp" parent="Theme.AppCompat.Light">
+    <style name="Theme.FakeStoreApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -10,40 +10,19 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">#1B2020</item>
         <!-- Customize your theme here. -->
     </style>
-
-    <style name="secondary_text_style">
-        <item name="android:color">@color/secondary_text</item>
-        <item name="android:textSize">13sp</item>
-        <item name="android:fontFamily">sans-serif-medium</item>
-    </style>
-    <style name="primary_text_style">
-        <item name="android:color">@color/primary_text</item>
-        <item name="android:textSize">16sp</item>
-        <item name="android:fontFamily">sans-serif-black</item>
-    </style>
-
 
     <style name="roundedImageView" parent="">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">8dp</item>
     </style>
 
-    <style name="buttons_style" parent="Widget.AppCompat.Button">
-        <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
-        <item name="android:textColor">#FFF</item>
-        <item name="android:textSize">16sp</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:padding">0dp</item>
-        <item name="android:layout_marginStart">25dp</item>
-        <item name="android:layout_marginEnd">25dp</item>
-        <item name="android:minHeight">60dp</item>
-        <item name="colorButtonNormal">@drawable/button_bg_blue</item>
-        <item name="android:background">@drawable/button_bg_blue</item>
-        <item name="android:height">50dp</item>
-        <item name="android:stateListAnimator">@null</item>
+    <style name="Theme.FakeStoreApp.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <!-- <item name="android:statusBarColor">@android:color/transparent</item>-->
     </style>
 
 
