--- a/app/src/main/res/drawable/ciruclar_progress_bar.xml
+++ b/app/src/main/res/drawable/ciruclar_progress_bar.xml
@@ -11,9 +11,9 @@
                 android:shape="ring"
                 android:thicknessRatio="25.0">
                 <gradient
-                    android:centerColor="@color/purple_700"
-                    android:endColor="@color/purple_700"
-                    android:startColor="@color/purple_700"
+                    android:centerColor="@color/colorProgress"
+                    android:endColor="@color/colorProgress"
+                    android:startColor="@color/colorProgress"
                     android:type="sweep" />
             </shape>
         </rotate>
@@ -29,9 +29,9 @@
                 android:shape="ring"
                 android:thicknessRatio="25.0">
                 <gradient
-                    android:centerColor="@color/teal_700"
-                    android:endColor="@color/teal_700"
-                    android:startColor="@color/teal_700"
+                    android:centerColor="@color/colorAccent"
+                    android:endColor="@color/colorAccent"
+                    android:startColor="@color/colorAccent"
                     android:type="sweep" />
             </shape>
         </rotate>
